# samrt-grid2

./: .gitignore  CMakeLists.txt  README.md  config.json
include/common/: certificate_generator.h  config.h  crypto_engine.h  energy_simulator.h  logger.h  metrics.h  network.h  theft_detection.h  tls_context.h  tou_billing.h  verifiable_computation.h  zkp_engine.h
scripts/: benchmark.sh  build.sh  ckks_param_benchmark.sh  run.sh  scheme_comparison.sh  setup.sh
scripts/plotting/: plot_billing_and_network.py  plot_core_metrics.py  plot_scalability.py  plot_scheme_accuracy.py  plot_scheme_comparison.py  plot_security_metrics.py  plot_theft_deviation.py  run_all_plots.sh
src/: aggregator_main.cpp  cert_generator_main.cpp  control_center_main.cpp  kdc_main.cpp  key_generator_main.cpp  scheme_comparison.cpp  smart_meter_main.cpp
src/common/: certificate_generator.cpp  config.cpp  crypto_engine.cpp  energy_simulator.cpp  logger.cpp  metrics.cpp  network.cpp  theft_detection.cpp  tls_context.cpp  tou_billing.cpp  verifiable_computation.cpp  zkp_engine.cpp
